fix bug #27120 and bug #25975 - preserve is_ref when bound objects are serialized