ext/standard/var.c
@@ -18,7 +18,7 @@
    +----------------------------------------------------------------------+
 */
 
-/* $Id: var.c,v 1.180 2004/01/08 08:17:35 andi Exp $ */
+/* $Id: var.c,v 1.181 2004/02/03 14:12:58 stas Exp $ */
 
 
 /* {{{ includes 
@@ -549,11 +549,16 @@ static void php_var_serialize_intern(smart_str *buf, zval **struc, HashTable *va
 	HashTable *myht;
 
 	if(var_hash 
-			&& php_add_var_hash(var_hash, *struc, (void *) &var_already) == FAILURE 
-			&& ((*struc)->is_ref || Z_TYPE_PP(struc) == IS_OBJECT)) {
-		smart_str_appendl(buf, "R:", 2);
-		smart_str_append_long(buf, *var_already);
-		smart_str_appendc(buf, ';');
+	   && php_add_var_hash(var_hash, *struc, (void *) &var_already) == FAILURE) {
+		if((*struc)->is_ref) {
+			smart_str_appendl(buf, "R:", 2);
+			smart_str_append_long(buf, *var_already);
+			smart_str_appendc(buf, ';');
+		} else if(Z_TYPE_PP(struc) == IS_OBJECT) {
+			smart_str_appendl(buf, "r:", 2);
+			smart_str_append_long(buf, *var_already);
+			smart_str_appendc(buf, ';');
+		}
 		return;
 	}
 
